k8s/books-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookservice
  template:
    metadata:
      labels:
        app: bookservice
    spec:
      containers:
        - name: bookservice
          image: jejikeh/modsen-books:latest
---
apiVersion: v1
kind: Service
metadata:
  name: books-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: bookservice
  ports:
    - name: bookservice
      protocol: TCP
      port: 80
      targetPort: 80
